// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table.Basic custom components renders correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-content"
  >
    <table
      name="my-table"
      style="table-layout: auto;"
    >
      <colgroup>
        <col />
      </colgroup>
      <thead
        name="my-header-wrapper"
      >
        <tr
          name="my-header-row"
        >
          <th
            class="rc-table-cell"
            colspan="1"
            name="my-header-cell"
            rowspan="1"
          >
            Name
          </th>
        </tr>
      </thead>
      <tbody
        name="my-body-wrapper"
      >
        <tr
          class="rc-table-row rc-table-row-level-0"
          name="my-body-row"
        >
          <td
            class="rc-table-cell"
            name="my-body-cell"
          >
            Lucy
          </td>
        </tr>
        <tr
          class="rc-table-row rc-table-row-level-0"
          name="my-body-row"
        >
          <td
            class="rc-table-cell"
            name="my-body-cell"
          >
            Jack
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table.Basic custom components renders fixed column and header correctly 1`] = `
<div
  class="rc-table rc-table-fixed-header rc-table-fixed-column"
>
  <div
    class="rc-table-header"
    style="overflow-x: scroll; margin-bottom: -15px;"
  >
    <table
      style="table-layout: fixed;"
    >
      <colgroup>
        <col />
        <col />
        <col />
        <col
          style="width: 15px; min-width: 15px;"
        />
      </colgroup>
      <thead
        name="my-header-wrapper"
      >
        <tr
          name="my-header-row"
        >
          <th
            class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
            colspan="1"
            name="my-header-cell"
            rowspan="1"
            style="position: sticky; left: 0px;"
          >
            Name
          </th>
          <th
            class="rc-table-cell"
            colspan="1"
            name="my-header-cell"
            rowspan="1"
          >
            Age
          </th>
          <th
            class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
            colspan="1"
            name="my-header-cell"
            rowspan="1"
            style="position: sticky; right: 15px;"
          >
            Gender
          </th>
          <th
            class="rc-table-cell rc-table-cell-fix-right rc-table-cell-scrollbar"
            colspan="1"
            name="my-header-cell"
            rowspan="1"
            style="position: sticky; right: 0px;"
          />
        </tr>
      </thead>
    </table>
  </div>
  <div
    class="rc-table-body"
    style="overflow-x: scroll; overflow-y: scroll; max-height: 100px;"
  >
    <table
      name="my-table"
      style="width: 100px; min-width: 100%; table-layout: fixed;"
    >
      <colgroup>
        <col />
        <col />
        <col />
      </colgroup>
      <tbody
        name="my-body-wrapper"
      >
        <tr
          class="rc-table-row rc-table-row-level-0"
          name="my-body-row"
        >
          <td
            class="rc-table-cell rc-table-cell-fix-left rc-table-cell-fix-left-last"
            name="my-body-cell"
            style="position: sticky; left: 0px;"
          >
            Lucy
          </td>
          <td
            class="rc-table-cell"
            name="my-body-cell"
          >
            27
          </td>
          <td
            class="rc-table-cell rc-table-cell-fix-right rc-table-cell-fix-right-first"
            name="my-body-cell"
            style="position: sticky; right: 0px;"
          >
            F
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table.Basic renders colSpan correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-content"
  >
    <table
      style="table-layout: auto;"
    >
      <colgroup>
        <col />
        <col />
      </colgroup>
      <thead>
        <tr>
          <th
            class="rc-table-cell"
            colspan="2"
            rowspan="1"
          >
            Name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="rc-table-row rc-table-row-level-0"
        >
          <td
            class="rc-table-cell"
            colspan="2"
          >
            John
          </td>
        </tr>
        <tr
          class="rc-table-row rc-table-row-level-0"
        >
          <td
            class="rc-table-cell"
          >
            Terry
          </td>
          <td
            class="rc-table-cell"
          >
            Garner
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table.Basic renders correctly 1`] = `
<div
  class="test-prefix test-class-name"
>
  <div
    class="test-prefix-content"
  >
    <table
      style="table-layout: auto;"
    >
      <colgroup>
        <col />
      </colgroup>
      <thead>
        <tr>
          <th
            class="test-prefix-cell"
            colspan="1"
            rowspan="1"
          >
            Name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="test-prefix-row test-prefix-row-level-0"
        >
          <td
            class="test-prefix-cell"
          >
            Lucy
          </td>
        </tr>
        <tr
          class="test-prefix-row test-prefix-row-level-0"
        >
          <td
            class="test-prefix-cell"
          >
            Jack
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table.Basic renders rowSpan correctly 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-content"
  >
    <table
      style="table-layout: auto;"
    >
      <colgroup>
        <col />
        <col />
      </colgroup>
      <thead>
        <tr>
          <th
            class="rc-table-cell"
            colspan="1"
            rowspan="1"
          >
            First Name
          </th>
          <th
            class="rc-table-cell"
            colspan="1"
            rowspan="1"
          >
            Last Name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="rc-table-row rc-table-row-level-0"
        >
          <td
            class="rc-table-cell"
          >
            John
          </td>
          <td
            class="rc-table-cell"
            rowspan="2"
          >
            Doe
          </td>
        </tr>
        <tr
          class="rc-table-row rc-table-row-level-0"
        >
          <td
            class="rc-table-cell"
          >
            Terry
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Table.Basic syntactic sugar 1`] = `
<div
  class="rc-table"
>
  <div
    class="rc-table-content"
  >
    <table
      style="table-layout: auto;"
    >
      <colgroup>
        <col />
      </colgroup>
      <thead>
        <tr>
          <th
            class="rc-table-cell"
            colspan="1"
          >
            total
          </th>
        </tr>
        <tr>
          <th
            class="rc-table-cell"
            colspan="1"
            rowspan="1"
          >
            Name
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="rc-table-placeholder"
        >
          <td
            class="rc-table-cell"
            colspan="1"
          >
            No Data
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
